# py-goalie

./: CHANGELOG.md  README.md  pyproject.toml  venv.sh
docs/: api.rst  conf.py  index.rst
src/goalie/: __init__.py  _bio.py  _check.py  _compare.py  _dims.py  _duplicates.py  _engine.py  _filesystem.py  _hex.py  _length.py  _matching.py  _misc.py  _names.py  _range.py  _require.py  _scalar.py  _sets.py  _system.py  _type.py  _url.py  _vectorize.py
tests/: test_bio.py  test_check.py  test_compare.py  test_dims.py  test_duplicates.py  test_engine.py  test_filesystem.py  test_hex.py  test_init.py  test_length.py  test_matching.py  test_misc.py  test_names.py  test_range.py  test_require.py  test_scalar.py  test_sets.py  test_system.py  test_type.py  test_url.py  test_vectorize.py
